# gitflux

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  gitflux.spec  pyproject.toml  tox.ini
.github/workflows/: codecov.yml  test.yml
src/gitflux/: __main__.py  typing.py  utils.py
src/gitflux/cli/: repo_commands.py
src/gitflux/commands/: __init__.py  archive_repos.py  create_repo.py  create_repos.py  delete_repo.py  delete_repos.py  list_repos.py
src/gitflux/core/: config.py  models.py
src/gitflux/providers/: __init__.py  gitee.py  github.py
tests/: conftest.py  test_cli.py
