[tool.poetry]
name = "gitflux"
version = "0.1.0"
description = "A nested command-line utility that helps you manage repositories hosted on GitHub."
authors = ["Garrett HE <garrett.he@hotmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "gitflux", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
pygithub = "^1.55"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
gitflux = "gitflux.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
