[project]
name = "gitflux"
version = "1.0.1"
description = "A nested command-line utility that helps you manage repositories hosted on Git service providers."
authors = [
    { name = "Garrett HE", email = "garrett.he@hotmail.com" },
]
readme = "README.md"
license = { text = "GPL-3.0" }
keywords = ["git", "github", "repository"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "click>=8.1.3",
    "pygithub>=1.55",
]

[project.urls]
homepage = "https://github.com/garrett-he/gitflux"
repository = "https://github.com/garrett-he/gitflux.git"
changelog = "https://github.com/garrett-he/gitflux/blob/main/CHANGELOG.md"
issues = "https://github.com/garrett-he/gitflux/issues"

[project.optional-dependencies]
dev = [
    "chance>=0.110",
    "pre-commit>=4.1.0",
    "pyinstaller>=6.11.1",
    "pylint>=3.3.4",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "tox>=4.24.1",
]

[project.scripts]
gitflux = "gitflux.__main__:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
