[project]
name = "gitflux"
version = "1.0.1"
description = "A nested command-line utility that helps you manage repositories hosted on Git service providers."
authors = [
    { name = "Garrett HE", email = "garrett.he@hotmail.com" },
]
readme = "README.md"
license = { text = "GPL-3.0" }
keywords = ["git", "github", "repository"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "typer (>=0.15.2,<1.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pygithub (>=2.6.1,<3.0.0)",
]

[project.urls]
homepage = "https://github.com/garrett-he/gitflux"
repository = "https://github.com/garrett-he/gitflux.git"
changelog = "https://github.com/garrett-he/gitflux/blob/main/CHANGELOG.md"
issues = "https://github.com/garrett-he/gitflux/issues"

[project.scripts]
gitflux = "gitflux.__main__:app"

[dependency-groups]
dev = [
    "chance (>=0.110,<0.111)",
    "nuitka (>=2.6.7, <3.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "pylint (>=3.3.4,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "tox (>=4.24.1,<5.0.0)",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
lint = "pylint src/ tests/"
test = "pytest --cov=src --cov-report=term-missing"
